==> scpcom/WiFiEsp/src/utility/esp32_spi.c <==
#include <stdio.h>
#include <stdlib.h>
#include "esp32_spi.h"
#include "esp32_spi_io.h"
#include "errno.h"
#define WIFI_IO0 -1

void esp32_spi_init(uint8_t t_cs_num, uint8_t t_rst_num, uint8_t t_rdy_num, uint8_t t_hard_spi)
{
    cs_pin = t_cs_num, rst_pin = t_rst_num, rdy_pin = t_rdy_num, is_hard_spi = t_hard_spi;
    //cs
    pinMode(cs_pin, OUTPUT);
    digitalWrite(cs_pin, HIGH);

    //ready
    pinMode(rdy_pin, INPUT); //ready

    if ((int8_t)rst_pin > 0)
    {
        pinMode(rst_pin, OUTPUT); //reset
    }

#if WIFI_IO0 >= 0
    pinMode(WIFI_IO0, INPUT); //gpio0
#endif

    esp32_spi_reset();
}

static void esp32_spi_reset(void)
{
#if ESP32_SPI_DEBUG
    printk("Reset ESP32\r\n");
#endif

#if WIFI_IO0 >= 0
    pinMode(WIFI_IO0, OUTPUT); //gpio0
    digitalWrite(WIFI_IO0, HIGH);
#endif

    //here we sleep 1s
    digitalWrite(cs_pin, HIGH);

    if ((int8_t)rst_pin > 0)
    {
        digitalWrite(rst_pin, LOW);
        delay(500);
        digitalWrite(rst_pin, HIGH);
        delay(800);
    }
    else
    {
        //soft reset
        esp32_spi_send_command(SOFT_RESET_CMD, NULL, 0);
        delay(1500);
    }

#if WIFI_IO0 >= 0
    pinMode(WIFI_IO0, INPUT); //gpio0
#endif
}

int8_t esp32_spi_wait_for_ready(void)
{
#if (ESP32_SPI_DEBUG >= 3)
    printk("Wait for ESP32 ready\r\n");
#endif

    uint64_t tm = micros();
    while ((micros() - tm) < 10 * 1000 * 1000) //10s
    {
        if (digitalRead(rdy_pin) == 0)
            return 0;

#if (ESP32_SPI_DEBUG >= 3)
        printk(".");
#endif
        delay(1); //FIXME
    }

#if (ESP32_SPI_DEBUG >= 3)
    printk("esp32 not responding\r\n");
#endif

    return -1;
}

static int8_t esp32_spi_send_command(uint8_t cmd, esp32_spi_params_t *params, uint8_t param_len_16)
{
    uint32_t packet_len = 0;

    packet_len = 4; // header + end byte
    if (params != NULL)
    {
        for (uint32_t i = 0; i < params->params_num; i++)
        {
            packet_len += params->params[i]->param_len;
            packet_len += 1; // size byte
            if (param_len_16)
                packet_len += 1;
        }
    }
    while (packet_len % 4 != 0)
        packet_len += 1;

    uint8_t *sendbuf = NULL;

    if (packet_len > lc_buf_len)
    {
        sendbuf = (uint8_t *)malloc(sizeof(uint8_t) * packet_len);
        lc_buf_flag = 0;
        if (!sendbuf)
        {
#if (ESP32_SPI_DEBUG)
            printk("%s: malloc error\r\n", __func__);
#endif
            return -1;
        }
    }
    else
    {
        sendbuf = lc_send_buf;
        lc_buf_flag = 1;
    }

    sendbuf[0] = START_CMD;
    sendbuf[1] = cmd & ~REPLY_FLAG;
    if (params != NULL)
        sendbuf[2] = params->params_num;
    else
        sendbuf[2] = 0;

    uint32_t ptr = 3;

    if (params != NULL)
    {
        //handle parameters here
        for (uint32_t i = 0; i < params->params_num; i++)
        {
#if (ESP32_SPI_DEBUG >= 2)
            printk("\tSending param #%d is %d bytes long\r\n", i, params->params[i]->param_len);
#endif

            if (param_len_16)
            {
                sendbuf[ptr] = (uint8_t)((params->params[i]->param_len >> 8) & 0xFF);
                ptr += 1;
            }
            sendbuf[ptr] = (uint8_t)(params->params[i]->param_len & 0xFF);
            ptr += 1;
            memcpy(sendbuf + ptr, params->params[i]->param, params->params[i]->param_len);
            ptr += params->params[i]->param_len;
        }
    }
    sendbuf[ptr] = END_CMD;

    esp32_spi_wait_for_ready();
    digitalWrite(cs_pin, LOW);

    uint64_t tm = micros();
    while ((micros() - tm) < 1000 * 1000)
    {
        if (digitalRead(rdy_pin))
            break;
        delay(1);
    }

    if ((micros() - tm) > 1000 * 1000)
    {
#if (ESP32_SPI_DEBUG)
        printk("ESP32 timed out on SPI select\r\n");
#endif
        digitalWrite(cs_pin, HIGH);
        if (lc_buf_flag == 0)
        {
            free(sendbuf);
            sendbuf = NULL;
        }
        else
        {
            memset(sendbuf, 0, packet_len);
        }
        return -1;
    }

    if (is_hard_spi) {
        hard_spi_rw_len(sendbuf, NULL, packet_len);
    } else {
        soft_spi_rw_len(sendbuf, NULL, packet_len);
    }
    digitalWrite(cs_pin, HIGH);

#if (ESP32_SPI_DEBUG >= 3)
    if (packet_len < 100)
    {
        printk("Wrote buf packet_len --> %d: ", packet_len);
        for (uint32_t i = 0; i < packet_len; i++)
            printk("%02x ", sendbuf[i]);
        printk("\r\n");
    }
#endif
    if (lc_buf_flag == 0)
    {
        free(sendbuf);
        sendbuf = NULL;
    }
    else
    {
        memset(sendbuf, 0, packet_len);
    }
    return 0;
}

esp32_spi_params_t *esp32_spi_wait_response_cmd(uint8_t cmd, uint32_t *num_responses, uint8_t param_len_16)
{
    uint32_t num_of_resp = 0;

    esp32_spi_wait_for_ready();

    digitalWrite(cs_pin, LOW);

    uint64_t tm = micros();
    while ((micros() - tm) < 1000 * 1000)
    {
        if (digitalRead(rdy_pin))
            break;
        delay(1);
    }

    if ((micros() - tm) > 1000 * 1000)
    {
#if ESP32_SPI_DEBUG
        printk("ESP32 timed out on SPI select\r\n");
#endif
        digitalWrite(cs_pin, HIGH);
        return NULL;
    }

    if (esp32_spi_wait_spi_char(START_CMD) != 0)
    {
#if ESP32_SPI_DEBUG
        printk("esp32_spi_wait_spi_char START_CMD error\r\n");
#endif
        digitalWrite(cs_pin, HIGH);
        return NULL;
    }

    if (esp32_spi_check_data(cmd | REPLY_FLAG) != 0)
    {
#if ESP32_SPI_DEBUG
        printk("esp32_spi_check_data cmd | REPLY_FLAG error\r\n");
#endif
        digitalWrite(cs_pin, HIGH);
        return NULL;
    }

    if (num_responses)
    {
        if (esp32_spi_check_data(*num_responses) != 0)
        {
#if ESP32_SPI_DEBUG
            printk("esp32_spi_check_data num_responses error\r\n");
#endif
            digitalWrite(cs_pin, HIGH);
            return NULL;
        }
        num_of_resp = *num_responses;
    }
    else
    {
        num_of_resp = esp32_spi_read_byte();
    }

    esp32_spi_params_t *params_ret = esp32_spi_params_alloc_struct(num_of_resp);

    for (uint32_t i = 0; i < num_of_resp; i++)
    {
        uint32_t param_len = esp32_spi_read_byte();

        if (param_len_16)
        {
            param_len <<= 8;
            param_len |= esp32_spi_read_byte();
        }

#if (ESP32_SPI_DEBUG >= 2)
        printk("\tParameter #%d length is %d\r\n", i, param_len);
#endif

        if (esp32_spi_param_alloc(params_ret, i, param_len, NULL))
            esp32_spi_read_bytes(params_ret->params[i]->param, params_ret->params[i]->param_len);
        else
            break;
    }

    if (esp32_spi_check_data(END_CMD) != 0)
    {
#if ESP32_SPI_DEBUG
        printk("esp32_spi_check_data END_CMD error\r\n");
#endif
        digitalWrite(cs_pin, HIGH);
        return NULL;
    }

    digitalWrite(cs_pin, HIGH);

    return params_ret;
}
